@@ -1,3 +1,11 @@
+2006-06-01  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/proxy.py:
+	* kiwi/ui/proxywidget.py:
+	* kiwi/ui/views.py:
+	Treat invisible and insensitive widgets specially, eg, do not
+	validate them and do not update the value in the model.
+
 2006-05-31  Johan Dahlin  <jdahlin@async.com.br>
 
 	* tests/test_datatypes.py (CurrencyTest.testFormatBR): Add a test 
